Signficantly improved UI. Still plenty to improve, such as the submit button next to the radio buttons spacing. Need to fix coloring, and login.html layout.

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,14 @@
 	color: #000;
 	font-style: bold;
 }
+
+.inline {
+	/*display: block;*/
+	/*width: auto;*/
+	display: inline;
+	/*width: 200px;*/
+}
+
+/*li {
+	display: inline;
+}*/
